TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "128044840936752" [label="Start"];
  "128044840936752" -> "128044840934064";
  "128044840934064" [label="Code"];
  "128044840934064" -> "128044840936848";
  "128044840936848" [label="Function"];
  "128044840936848" -> "128044840934928";
  "128044840936848" -> "128044840936656";
  "128044840936848" -> "128044840928640";
  "128044840934928" [label="main IDENTIFIER"];
  "128044840936656" [label="Parameters"];
  "128044840928640" [label="Code"];
  "128044840928640" -> "128044840939968";
  "128044840928640" -> "128044840930848";
  "128044840928640" -> "128044840938528";
  "128044840939968" [label="Code"];
  "128044840939968" -> "128044840939056";
  "128044840939056" [label="Declaration"];
  "128044840939056" -> "128044840934400";
  "128044840939056" -> "128044840937424";
  "128044840934400" [label="x IDENTIFIER"];
  "128044840937424" [label="1 INT"];
  "128044840930848" [label="Code"];
  "128044840930848" -> "128044840935600";
  "128044840935600" [label="Declaration"];
  "128044840935600" -> "128044840938864";
  "128044840935600" -> "128044840941072";
  "128044840938864" [label="x IDENTIFIER"];
  "128044840941072" [label="2 INT"];
  "128044840938528" [label="Return"];
  "128044840938528" -> "128044840934784";
  "128044840938528" -> "128044840940688";
  "128044840934784" [label="return T__34"];
  "128044840940688" [label="0 INT"];
}
